Fixing grammar errors and updating github pic

--- a/about.html
+++ b/about.html
@@ -15,10 +15,9 @@
     <div class="navbar">
       <img src="images/logo.png" id="logo" />
       <div class="navLinks">
-      <a class="nav" href="index.html" data-id="p1">Home</a>
-      <a class="nav" href="about.html" data-id="p2">About</a>
-      <a class="nav" href="portfolio.html" data-id="p3">Portfolio</a>
-      </div>
+        <a class="nav" href="index.html" data-id="p1">Home</a>
+        <a class="nav" href="about.html" data-id="p2">About</a>
+        <a class="nav" href="portfolio.html" data-id="p3">Portfolio</a>
       </div>
     </div>
     <button id="darkmode" onclick="darkMode();">☾</button>
@@ -28,19 +27,19 @@
       <p>
         Hi, this is a little bit about me, the side of me that isn't behind a
         computer screen. I'm Haitian and I carry that part of my culture
-        proudly, especially the foods. I was actually born in Haiti but I moved
-        to America, spending the majority of it in South Florida. I moved to
-        Orlando becuause I got into UCF in Spring 2023. My family, as seen in
-        the slideshow below does a great job of keeping the Haitian and South
-        Floridian cukture instilled in me. I'm currently a third year Computer
-        Science major, looking to make the best of the rest of my time here.
+        proudly, especially when it comes to cuisine. I was actually born in
+        Haiti but I moved to America, spending the majority of my time since in
+        South Florida. I moved to Orlando because I got into UCF in Spring 2023.
+        My family, as seen in the slideshow below does a great job of keeping
+        the Haitian and South Floridian culture instilled in me. I'm currently a
+        third year Computer Science major, looking to make the best of the rest
+        of my time here.
       </p>
       <p>
         Outside of school, my main hobbies revolve around being active. I love
         basketball, it's my favorite sport. I enjoy playing it, I enjoy watching
-        it, and it's always fun rooting for my team. Go Heat! I like to dabble
         into football here and there in support of the Washington Commanders. I
-        also like to go to the gym. There's just something so therapuetic about
+        also like to go to the gym. There's just something so therapeutic about
         picking up heavy stuff. That combined with the aesthetic, strength, and
         health benefits had me fall in love with the gym in no time.
       </p>
