--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
         my goal is to have something to show by the end of this year.
       </p>
       <div class="ghWindow">
-        <img src="images/githublanding.png" id="ghPic" />
+        <img src="images/githublandingJ.png" id="ghPic" />
         <p id="ghPrompt">Click here to see my Github</p>
       </div>
       <button id="contact">Contact Me</button>
